--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "dev": "vite dev",
     "dev-host": "vite dev --host",
-    "build": "vite build",
-    "start": "vite preview",
+    "build": "vite build && mkdir static\\images",
+    "preview": "vite preview",
+    "start": "node server.js",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
@@ -32,6 +33,8 @@
   "type": "module",
   "dependencies": {
     "@ericblade/quagga2": "^1.8.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "fuzzy-search": "^3.2.1",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6"
