removed unnecessary dev files from docker ignore and docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,19 @@
 node_modules
+.npmrc
+
 .svelte-kit
 build
+
 .env
+.env.example
+
 static/images
 database/database.sqlite
+
+.git
+.gitignore
+
+README.md
+
+Dockerfile
+.dockerignore
