--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DATABASE_PATH="database/database.sqlite"
 IMAGES_PATH="static/images"
 ORIGIN=
+
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_URL=
