--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite dev",
     "dev-host": "vite dev --host",
-    "build": "vite build && mkdir \"static/images\"",
+    "build": "npx prisma generate && vite build && mkdir \"static/images\"",
     "preview": "vite preview",
     "start": "node server.mjs",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
     "postcss-load-config": "^4.0.1",
+    "prisma": "^5.6.0",
     "svelte": "^4.2.1",
     "svelte-check": "^3.5.2",
     "svelte-preprocess": "^5.0.4",
@@ -33,10 +34,9 @@
   "type": "module",
   "dependencies": {
     "@ericblade/quagga2": "^1.8.2",
+    "@prisma/client": "^5.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fuzzy-search": "^3.2.1",
-    "sqlite": "^5.0.1",
-    "sqlite3": "^5.1.6"
+    "fuzzy-search": "^3.2.1"
   }
 }
