--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev-host": "vite dev --host",
     "build": "npx prisma generate && vite build && mkdir \"static/images\"",
     "preview": "vite preview",
-    "start": "node server.mjs",
+    "start": "npx prisma migrate deploy && node server.mjs",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
