--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
   "type": "module",
   "dependencies": {
     "@ericblade/quagga2": "^1.8.2",
+    "@floating-ui/dom": "^1.5.3",
     "@prisma/client": "^5.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fuzzy-search": "^3.2.1"
+    "fuzzy-search": "^3.2.1",
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1"
   }
 }
