schema, login, email confirmation

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_DATABASE=
 DATABASE_URL=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_FROM=
+
+# seconds
+EMAIL_CONFIRMATION_EXPIRATION_TIME=
