--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "scripts": {
     "dev": "vite dev",
     "dev-host": "vite dev --host",
-    "build": "npx prisma generate && vite build && mkdir \"static/images\"",
+    "build": "run-p build:*",
+    "build:app": "vite build",
+    "build:prisma": "npx prisma-import -s prisma/schemas/* -o prisma/schema.prisma -f && npx prisma generate",
+    "build:assets": "mkdir \"static/images\" || exit 0",
+    "start": "run-s start:prisma start:server",
+    "start:prisma": "npx prisma migrate deploy",
+    "start:server": "node server.mjs",
     "preview": "vite preview",
-    "start": "npx prisma migrate deploy && node server.mjs",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
@@ -19,7 +24,10 @@
     "@tailwindcss/forms": "^0.5.6",
     "@types/fuzzy-search": "^2.1.2",
     "@types/node": "^20.7.1",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.30",
     "postcss-load-config": "^4.0.1",
     "prisma": "^5.6.0",
