--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^4.18.2",
     "fuzzy-search": "^3.2.1",
     "nodemailer": "^6.9.7",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   }
 }
