--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "@ericblade/quagga2": "^1.8.2",
     "@floating-ui/dom": "^1.5.3",
     "@prisma/client": "^5.6.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fuzzy-search": "^3.2.1",
+    "highlight.js": "^11.9.0",
     "nodemailer": "^6.9.7",
+    "sharp": "^0.33.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
