--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@floating-ui/dom": "^1.5.4",
     "@prisma/client": "^5.8.0",
     "compression": "^1.7.4",
+    "decode-formdata": "^0.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fuzzy-search": "^3.2.1",
