wip: admin setup first account

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ EMAIL_FROM=
 EMAIL_CONFIRMATION_EXPIRATION_TIME=
 
 SESSION_COOKIE_NAME="sessionToken"
+
+ADMIN_EMAIL="" # optional (leave empty quotes)
