--- a/package.json
+++ b/package.json
@@ -1,58 +1,63 @@
 {
-  "name": "library",
-  "version": "0.8.1",
-  "scripts": {
-    "dev": "vite dev",
-    "dev-host": "vite dev --host",
-    "build": "run-p build:*",
-    "build:app": "vite build",
-    "build:prisma": "npx prisma-import -s prisma/schemas/* -o prisma/schema.prisma -f && npx prisma generate",
-    "build:assets": "mkdir \"static/images\" || exit 0",
-    "start": "run-s start:prisma start:server",
-    "start:prisma": "npx prisma migrate deploy",
-    "start:server": "node server.mjs",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-  },
-  "devDependencies": {
-    "@iconify/svelte": "^3.1.6",
-    "@skeletonlabs/skeleton": "^2.7.0",
-    "@skeletonlabs/tw-plugin": "^0.3.1",
-    "@sveltejs/adapter-node": "^3.0.0",
-    "@sveltejs/kit": "^2.3.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/fuzzy-search": "^2.1.5",
-    "@types/node": "^20.11.0",
-    "@types/nodemailer": "^6.4.14",
-    "@types/uuid": "^9.0.7",
-    "autoprefixer": "^10.4.16",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.33",
-    "postcss-load-config": "^5.0.2",
-    "prisma": "^5.8.0",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.3",
-    "svelte-preprocess": "^5.1.3",
-    "tailwindcss": "^3.4.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11"
-  },
-  "type": "module",
-  "dependencies": {
-    "@ericblade/quagga2": "^1.8.4",
-    "@floating-ui/dom": "^1.5.4",
-    "@prisma/client": "^5.8.0",
-    "compression": "^1.7.4",
-    "decode-formdata": "^0.6.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "fuzzy-search": "^3.2.1",
-    "highlight.js": "^11.9.0",
-    "nodemailer": "^6.9.8",
-    "sharp": "^0.33.2",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
-  }
+    "name": "library",
+    "version": "0.8.1",
+    "scripts": {
+        "dev": "vite dev",
+        "build": "run-s build:* prisma:*",
+        "build:app": "vite build",
+        "build:assets": "mkdir \"static/images\" || exit 0",
+        "prisma:import": "npx prisma-import -s prisma/schemas/* -o prisma/schema.prisma -f",
+        "prisma:generate": "npx prisma generate",
+        "prisma:seed": "npx prisma db seed",
+        "start": "run-s start:prisma start:server",
+        "start:prisma": "npx prisma migrate deploy",
+        "start:server": "node server.mjs",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    },
+    "devDependencies": {
+        "@iconify/svelte": "^3.1.6",
+        "@skeletonlabs/skeleton": "^2.7.0",
+        "@skeletonlabs/tw-plugin": "^0.3.1",
+        "@sveltejs/adapter-node": "^3.0.0",
+        "@sveltejs/kit": "^2.3.2",
+        "@tailwindcss/forms": "^0.5.7",
+        "@types/fuzzy-search": "^2.1.5",
+        "@types/node": "^20.11.0",
+        "@types/nodemailer": "^6.4.14",
+        "@types/uuid": "^9.0.7",
+        "autoprefixer": "^10.4.16",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.4.33",
+        "postcss-load-config": "^5.0.2",
+        "prisma": "^5.14.0",
+        "svelte": "^4.2.8",
+        "svelte-check": "^3.6.3",
+        "svelte-preprocess": "^5.1.3",
+        "tailwindcss": "^3.4.1",
+        "tslib": "^2.6.2",
+        "typescript": "^5.3.3",
+        "vite": "^5.0.11"
+    },
+    "type": "module",
+    "dependencies": {
+        "@ericblade/quagga2": "^1.8.4",
+        "@floating-ui/dom": "^1.5.4",
+        "@prisma/client": "^5.14.0",
+        "compression": "^1.7.4",
+        "decode-formdata": "^0.6.0",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "fuzzy-search": "^3.2.1",
+        "highlight.js": "^11.9.0",
+        "nodemailer": "^6.9.8",
+        "sharp": "^0.33.2",
+        "tsx": "^4.10.4",
+        "uuid": "^9.0.1",
+        "zod": "^3.22.4"
+    },
+    "prisma": {
+        "seed": "tsx prisma/seed.ts"
+    }
 }
