added admin and permission group properties to create user form && wip: edit user form

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,5 @@ SESSION_EXPIRATION_TIME=
 SESSION_COOKIE_NAME="sessionToken"
 
 ADMIN_EMAIL="" # optional (leave empty quotes)
+
+DEFAULT_PERMISSION_GROUP_NAME="Member"
