renamed npm command start:prisma to prisma:deploy

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "prisma:import": "npx prisma-import -s prisma/schemas/* -o prisma/schema.prisma -f",
         "prisma:generate": "npx prisma generate",
         "prisma:seed": "npx prisma db seed",
-        "start": "run-s start:prisma start:server",
-        "start:prisma": "npx prisma migrate deploy",
+        "prisma:deploy": "npx prisma migrate deploy",
+        "start": "run-s prisma:deploy start:server",
         "start:server": "node server.mjs",
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
