--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "svelte": "^4.2.8",
         "svelte-check": "^3.6.3",
         "svelte-preprocess": "^5.1.3",
+        "sveltekit-superforms": "^2.16.0",
         "tailwindcss": "^3.4.1",
         "tslib": "^2.6.2",
         "typescript": "^5.3.3",
