--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "@types/node": "^20.11.0",
         "@types/nodemailer": "^6.4.14",
         "@types/uuid": "^9.0.7",
-        "autoprefixer": "^10.4.16",
+        "autoprefixer": "^10.4.19",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.33",
         "postcss-load-config": "^5.0.2",
@@ -35,6 +35,7 @@
         "svelte": "^4.2.8",
         "svelte-check": "^3.6.3",
         "svelte-preprocess": "^5.1.3",
+        "sveltekit-superforms": "^2.16.0",
         "tailwindcss": "^3.4.1",
         "tslib": "^2.6.2",
         "typescript": "^5.3.3",
