adds docker-compose example and improves .env-example

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,30 @@
+STATIC="/app/static"
 IMAGES_PATH="static/images"
-ORIGIN=
+PORT="3000"
+RESTART="always"
 
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_DATABASE=
-DATABASE_URL=
+ORIGIN="https://yourdomain.com"
 
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
-EMAIL_PASSWORD=
-EMAIL_FROM=
+PG="pg"
 
-# seconds
-EMAIL_CONFIRMATION_EXPIRATION_TIME=
-SESSION_EXPIRATION_TIME=
+POSTGRES_DB="library"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="use_a_better_password"
+
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${PG}:5432/${POSTGRES_DB}"
+
+# SMTP configuration to enable Library to send emails
+EMAIL_HOST="some.host.com"
+EMAIL_PORT="587"
+EMAIL_USER="emai_addres"
+EMAIL_PASSWORD="use_a_better_password"
+EMAIL_FROM="emai_addres"
+
+# timeouts in seconds
+EMAIL_CONFIRMATION_EXPIRATION_TIME=600
+SESSION_EXPIRATION_TIME=2592000 # 1 month
 
 SESSION_COOKIE_NAME="sessionToken"
 
+# default email addres for the first admin
 ADMIN_EMAIL="" # optional (leave empty quotes)
