--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "version": "0.8.1",
     "scripts": {
         "dev": "vite dev",
-        "build": "run-s prisma:generate build:app build:assets",
+        "build": "run-s prisma:generate build:app",
         "build:app": "vite build",
-        "build:assets": "mkdir \"static/images\" || exit 0",
         "prisma:import": "npx prisma-import -s prisma/schemas/* -o prisma/schema.prisma -f",
         "prisma:generate": "npx prisma generate",
         "prisma:seed": "npx prisma db seed",
