moved max file upload size to a env variable

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ SESSION_COOKIE_NAME="sessionToken"
 
 # default email addres for the first admin
 ADMIN_EMAIL="" # optional (leave empty quotes)
+
+# sizes in bytes
+MAX_IMAGE_UPLOAD_SIZE=16000000
