--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "fuzzy-search": "^3.2.1",
         "nodemailer": "^6.9.8",
         "npm-run-all": "^4.1.5",
+        "pretty-bytes": "^6.1.1",
         "sharp": "^0.33.2",
         "tsx": "^4.10.4",
         "uuid": "^9.0.1",
