fix default request body size to support image uploads (resolves #15)

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,4 @@ ADMIN_EMAIL="" # optional (leave empty quotes)
 
 # sizes in bytes
 MAX_IMAGE_UPLOAD_SIZE=16000000
+BODY_SIZE_LIMIT=64000000 # must be greater than MAX_IMAGE_UPLOAD_SIZE
