--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "@sveltejs/adapter-node": "^3.0.0",
         "@sveltejs/kit": "^2.3.2",
         "@tailwindcss/forms": "^0.5.7",
-        "@types/fuzzy-search": "^2.1.5",
         "@types/node": "^20.11.0",
         "@types/nodemailer": "^6.4.14",
         "@types/uuid": "^9.0.7",
@@ -47,7 +46,7 @@
         "compression": "^1.7.4",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "fuzzy-search": "^3.2.1",
+        "fuse.js": "^7.0.0",
         "nodemailer": "^6.9.8",
         "npm-run-all": "^4.1.5",
         "pretty-bytes": "^6.1.1",
