--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@sveltejs/adapter-node": "^3.0.0",
         "@sveltejs/kit": "^2.3.2",
         "@tailwindcss/forms": "^0.5.7",
+        "@types/express": "^4.17.21",
         "@types/node": "^20.11.0",
         "@types/nodemailer": "^6.4.14",
         "@types/uuid": "^9.0.7",
