--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
         "sourceMap": true,
         "strict": true,
         "noErrorTruncation": true
-    }
+    },
+    "include": ["src/**/*", "server.mjs"],
     // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
     //
     // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
