--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
         "strict": true,
         "noErrorTruncation": true
     },
-    "include": ["src/**/*", "server.mjs"],
+    "include": [
+        "src/**/*",
+        ".svelte-kit/**/*.d.ts",
+        "server.mjs"
+    ],
     // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
     //
     // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
