--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@ericblade/quagga2": "^1.8.4",
         "@floating-ui/dom": "^1.5.4",
         "@prisma/client": "^5.14.0",
+        "chalk": "^5.3.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "fuse.js": "^7.0.0",
