update .env.example based on new validation

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,32 @@
-STATIC="/app/static" # absolute path
-
-PORT="3000"
-RESTART="always"
-
+# General Configuration
+STATIC="/app/static"            # absolute path
+PORT="3000"                     # optional
+RESTART="always"                # optional
 ORIGIN="https://yourdomain.com"
 
+# Database Configuration (required)
 PG="pg"
-
 POSTGRES_DB="library"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="use_a_better_password"
-
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${PG}:5432/${POSTGRES_DB}"
 
-# SMTP configuration to enable Library to send emails
+# SMTP Configuration (required)
 EMAIL_HOST="some.host.com"
 EMAIL_PORT="587"
-EMAIL_USER="emai_addres"
+EMAIL_USER="email_address"
 EMAIL_PASSWORD="use_a_better_password"
-EMAIL_FROM="emai_addres"
+EMAIL_FROM="email_address"
 
-# timeouts in seconds
-EMAIL_CONFIRMATION_EXPIRATION_TIME=600
-SESSION_EXPIRATION_TIME=2592000 # 1 month
+# Other Configuration
+# All time values are in seconds
+EMAIL_CONFIRMATION_EXPIRATION_TIME=600 # optional
+SESSION_EXPIRATION_TIME=2592000        # optional
+SESSION_COOKIE_NAME="sessionToken"     # optional
 
-SESSION_COOKIE_NAME="sessionToken"
+# Default email address for the first admin
+ADMIN_EMAIL="my_email@domain.com" # optional
 
-# default email addres for the first admin
-ADMIN_EMAIL="" # optional (leave empty quotes)
-
-# sizes in bytes
-MAX_IMAGE_UPLOAD_SIZE=16000000
-BODY_SIZE_LIMIT=64000000 # must be greater than MAX_IMAGE_UPLOAD_SIZE
+# Size Limits (in bytes)
+MAX_IMAGE_UPLOAD_SIZE=16000000 # optional
+BODY_SIZE_LIMIT=64000000       # optional (must be greater than MAX_IMAGE_UPLOAD_SIZE)
