--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "prisma:import": "npx prisma-import -s \"prisma/schemas/*\" -o prisma/schema.prisma -f",
         "prisma:generate": "npx prisma generate",
         "prisma:seed": "npx prisma db seed",
-        "prisma:deploy": "npx prisma migrate deploy",
+        "prisma:deploy": "tsx prisma/deploy.ts",
         "start": "run-s prisma:deploy prisma:generate prisma:seed start:server",
         "start:server": "node server.mjs",
         "preview": "vite preview",
@@ -43,7 +43,7 @@
     "dependencies": {
         "@ericblade/quagga2": "^1.8.4",
         "@floating-ui/dom": "^1.5.4",
-        "@prisma/client": "^5.14.0",
+        "@prisma/client": "^5.17.0",
         "chalk": "^5.3.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
