--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
         "dev": "vite dev",
         "build": "run-s prisma:generate build:app",
         "build:app": "vite build",
-        "prisma:import": "npx prisma-import -s \"prisma/schemas/*\" -o prisma/schema.prisma -f",
-        "prisma:generate": "npx prisma generate",
-        "prisma:seed": "npx prisma db seed",
+        "prisma:generate": "prisma generate --no-hints",
+        "prisma:seed": "prisma db seed",
         "prisma:deploy": "tsx prisma/deploy.ts",
+        "prisma:studio": "prisma studio --browser none",
         "start": "run-s prisma:deploy prisma:generate prisma:seed start:server",
         "start:server": "node server.mjs",
         "preview": "vite preview",
@@ -29,7 +29,7 @@
         "autoprefixer": "^10.4.19",
         "postcss": "^8.4.33",
         "postcss-load-config": "^5.0.2",
-        "prisma": "^5.14.0",
+        "prisma": "^5.20.0",
         "svelte": "^4.2.8",
         "svelte-check": "^3.6.3",
         "svelte-preprocess": "^5.1.3",
@@ -42,7 +42,7 @@
     "dependencies": {
         "@ericblade/quagga2": "^1.8.4",
         "@floating-ui/dom": "^1.5.4",
-        "@prisma/client": "^5.17.0",
+        "@prisma/client": "^5.20.0",
         "chalk": "^5.3.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
